<resources>
    <string name="app_name">chillbill</string>
    <string name="title">ChillBill</string>
    <string name="expenses">Wydatki</string>
    <string name="yellow_category">Żywność</string>
    <string name="blue_category">Multimedia</string>
    <string name="green_category">Elektronika</string>
    <string name="orange_category">Ubrania</string>
    <string name="purple_category">Meble</string>
    <string name="add_recept">Dodaj paragon</string>
    <string name="log_with_google">Zaloguj z google</string>
    <string name="history">Historia</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="example_shop_name">Biedronka</string>
    <string name="example_price">253,15</string>
    <string name="see_more">zobacz więcej</string>
    <string name="fit">Fit</string>
    <string name="food">Jedzenie</string>
    <string name="search">szukaj</string>
    <string name="example_date">2020-01-01</string>
    <string name="example_category_name">Podstawowe wydatki</string>
    <string name="bill">Paragon</string>
    <string name="shopping_list">Lista zakupów</string>
    <string name="month_to_month_comparison">Porównanie miesięcy</string>
    <string name="trends">Trendy</string>
    <string name="savings">Oszczędzanie</string>
    <string name="product_name">Nazwa</string>
    <string name="pirce_title">Cena</string>
    <string name="quantity">Ilość</string>
    <string name="category">Kategoria</string>
    <string name="confirm">Potwierdź</string>
    <string name="todo">TODO</string>
    <string name="textview">TextView</string>
    <string name="take_picture">Zrób zdjęcie</string>
    <string name="take_from_galery">Wybierz z galerii</string>
    <string name="add_manually">Wprowadź dane ręcznie</string>
    <string name="log_out">Wyloguj</string>
    <string name="product_edit">Edycja produktu</string>
    <string name="SmgWrg">Something went wrong, try again later.</string>
    <string name="Expenses">Wydatki</string>
    <string name="future_feature">Ta funkcja będzie dostępna w przyszłości.</string>
    <string name="camera_permission_granted">Przyznano uprawnienia aparatowi</string>
    <string name="camera_permissons_denied">Odmówiono uprawnień do aparatu</string>
    <string name="you_signed_out">Wylogowaliśmy Cię</string>
    <string name="you_logged_in">Zalogowaliśmy Cie</string>
    <string name="login_failed">Problemy z logowaniem, spróbuj później</string>

</resources>