<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    tools:context=".PieChartFragment">

    <LinearLayout
        android:id="@+id/linearLayout"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:gravity="center_horizontal">

        <TextView
            android:id="@+id/dateTextView"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="Od 01.2021" />

        <com.github.mikephil.charting.charts.PieChart
            android:id="@+id/pie_chart"
            android:layout_width="230sp"
            android:layout_height="230dp">

        </com.github.mikephil.charting.charts.PieChart>

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content">

            <TextView
                android:id="@+id/textView16"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="4dp"
                android:drawableStart="@drawable/purple_small_circle"
                android:drawablePadding="6dp"
                android:text="@string/purple_category"
                android:textColor="@color/dark_grey"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <TextView
                android:id="@+id/textView17"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="72dp"
                android:drawableStart="@drawable/yellow_small_circle"
                android:drawablePadding="6dp"
                android:text="@string/yellow_category"
                android:textColor="@color/dark_grey"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toEndOf="@+id/textView18"
                app:layout_constraintTop_toTopOf="@+id/textView16" />

            <TextView
                android:id="@+id/textView18"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="4dp"
                android:drawableStart="@drawable/green_small_circle"
                android:drawablePadding="6dp"
                android:text="@string/green_category"
                android:textColor="@color/dark_grey"
                app:layout_constraintStart_toStartOf="@+id/textView16"
                app:layout_constraintTop_toBottomOf="@+id/textView16" />

            <TextView
                android:id="@+id/textView19"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:drawableStart="@drawable/orange_small_circle"
                android:drawablePadding="6dp"
                android:text="@string/orange_category"
                android:textColor="@color/dark_grey"
                app:layout_constraintBottom_toBottomOf="@+id/textView18"
                app:layout_constraintStart_toStartOf="@+id/textView17"
                app:layout_constraintTop_toTopOf="@+id/textView18" />

            <TextView
                android:id="@+id/textView20"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="4dp"
                android:drawableStart="@drawable/blue_small_circle"
                android:drawablePadding="6dp"
                android:text="@string/blue_category"
                android:textColor="@color/dark_grey"
                app:layout_constraintStart_toStartOf="@+id/textView18"
                app:layout_constraintTop_toBottomOf="@+id/textView18" />
        </androidx.constraintlayout.widget.ConstraintLayout>

    </LinearLayout>
</FrameLayout>