<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ProductPropertiesEditor"
    android:background="@color/white">

    <TableLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="24dp"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="24dp"
        android:layout_marginBottom="16dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <TextView
                android:id="@+id/textView2"
                style="@style/header"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/product_name" />

            <Space
                android:layout_width="50dp"
                android:layout_height="wrap_content" />

            <com.google.android.material.textfield.TextInputEditText
                style="@style/table_element"
                android:layout_width="250dp"
                android:layout_height="wrap_content"
                android:hint="hint"
                android:outlineAmbientShadowColor="@color/black"
                android:outlineSpotShadowColor="@color/black"
                android:shadowColor="@color/black"
                android:textColorHighlight="@color/black"
                android:textColorHint="@color/black"
                android:textColorLink="@color/black"/>

        </TableRow>

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <TextView
                android:id="@+id/textView12"
                style="@style/bold_price"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/pirce_title" />

            <Space
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" />


            <EditText
                android:id="@+id/editTextNumberDecimal"
                style="@style/table_element"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:ems="10"
                android:inputType="numberDecimal" />

        </TableRow>

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <TextView
                android:id="@+id/textView13"
                style="@style/bold_price"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/quantity" />

            <Space
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" />

            <EditText
                android:id="@+id/editTextNumberDecimal2"
                style="@style/table_element"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:ems="10"
                android:inputType="numberDecimal" />
        </TableRow>

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <TextView
                android:id="@+id/textView14"
                style="@style/bold_price"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/category" />

            <Space
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" />

            <Spinner
                android:id="@+id/spinner"
                style="@style/table_element"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:backgroundTint="@color/dark_grey"
                />

        </TableRow>
    </TableLayout>
</androidx.constraintlayout.widget.ConstraintLayout>